# ChangeLog for dev-ruby/rspec-core
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-core/ChangeLog,v 1.11 2011/06/17 18:26:33 graaff Exp $

*rspec-core-2.6.4 (17 Jun 2011)

  17 Jun 2011; Hans de Graaff <graaff@gentoo.org> +rspec-core-2.6.4.ebuild:
  Version bump.

  31 May 2011; Hans de Graaff <graaff@gentoo.org> rspec-core-2.5.1.ebuild:
  Drop ruby19 to create a stable candidate.

  23 May 2011; Hans de Graaff <graaff@gentoo.org> rspec-core-2.6.0.ebuild:
  Add jruby support.

*rspec-core-2.6.0 (13 May 2011)

  13 May 2011; Hans de Graaff <graaff@gentoo.org>
  -rspec-core-2.0.0_beta22.ebuild, -rspec-core-2.4.0.ebuild,
  +rspec-core-2.6.0.ebuild:
  Remove old versions.

*rspec-core-2.5.1 (19 Feb 2011)

  19 Feb 2011; Hans de Graaff <graaff@gentoo.org> +rspec-core-2.5.1.ebuild:
  Version bump.

  02 Feb 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  rspec-core-2.4.0.ebuild, +files/rspec-core-2.4.0-tests.patch:
  Use upstream specs fixes (as the custom one didn't work with Ruby 1.9) and
  add ruby19 support.

*rspec-core-2.4.0 (15 Jan 2011)

  15 Jan 2011; Hans de Graaff <graaff@gentoo.org> +rspec-core-2.4.0.ebuild:
  Version bump for RSpec 2.4.0.

  27 Dec 2010; Fabian Groffen <grobian@gentoo.org>
  rspec-core-2.0.0_beta22.ebuild:
  Marked ~x64-solaris

  25 Oct 2010; Jeroen Roovers <jer@gentoo.org>
  rspec-core-2.0.0_beta22.ebuild:
  Marked ~hppa (bug #337956).

  18 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  rspec-core-2.0.0_beta22.ebuild:
  Add ~ia64 wrt #337113

*rspec-core-2.0.0_beta22 (13 Sep 2010)

  13 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  +rspec-core-2.0.0_beta22.ebuild, +metadata.xml:
  Initial import of rspec-2.
